[package]
name = "rapier3d-electron"
version = "0.1.0"
license = "AGPL"
edition = "2024"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "1.3.3" }
neon = "1.1"
rapier3d = { version = "0.27.0", features = ["parallel", "simd-stable", "serde-serialize"] }
nalgebra = "0.33"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
